changed bg to grey

--- a/mystyle.css
+++ b/mystyle.css
@@ -210,8 +210,7 @@
 		}
 		body
 		{
-			background-color:#C7FFF1;
-			<!--background-color:#E4E4E4;-->
+			background-color:#E4E4E4;
 			height:100%;
 		}
 		.center_img{ display:block; margin: auto;}
